PATCH JSON based values functionality
